# stremio-addons

./: .drone.yml  Dockerfile  nginx.Dockerfile  nginx.conf  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment-p.yaml  deployment.yaml  ingress-p.yaml  ingress.yaml  service-p.yaml  service.yaml  serviceaccount.yaml
stremio_addons/: config.py  dependencies.py  main.py  models.py
stremio_addons/handlers/: __init__.py  eneyida.py  proxy.py  rezka.py
