[project]
name = "stremio_addons"
version = "0.1.0"
dependencies = [
    "backoff ~= 2.2.1",
    "fastapi ~= 0.95.2",
    "uvicorn ~= 0.22.0",
    "aiohttp ~= 3.8.4",
    "lxml ~= 4.9.2",
    "cloudscraper ~= 1.2.71",
    "unidecode ~= 1.3.6",
    "asyncer ~= 0.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff ~= 0.0.269",
    "black ~= 23.3.0",
]

[tool.setuptools]
include-package-data = true
packages = ["stremio_addons"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I"]
ignore = []

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".ve",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10